add blessed good boi

--- a/labs/6.02-lab-numpy-ladder-challenge-master/part-3-numpy-ladder.ipynb
+++ b/labs/6.02-lab-numpy-ladder-challenge-master/part-3-numpy-ladder.ipynb
@@ -1756,6 +1756,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![blessed_doge](blessed_doge.gif)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Still... so what?\n",
     "SVD is at the heart of one of our most confusing topics - **principal component analysis**. PCA involves carrying out SVD on our data matrix in order to **reduce its dimensionality**. That is, can we still have all the information we need in a data set while having fewer variables?"
    ]
