--- a/labs/10.1-lab-sql-master/10.01-lab-starter-code.ipynb
+++ b/labs/10.1-lab-sql-master/10.01-lab-starter-code.ipynb
@@ -1577,8 +1577,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Prompt 11 Answer**: According to my findings, all 3,049,913 bt"
+    "**Prompt 11 Answer**: According to my findings, all 3,049,913 btl_price, bottle_qty, and total are accurate"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
